refine: 优化上下文prompt组装和代码结构